# lemi_3w

./: .gitignore  README.md  experiment_all_wells.ipynb  experiment_one_well.ipynb  pyproject.toml
constants/: config.py  module_constants.py  storage_config.py  utils.py
data_exploration/: exploration_notebook.ipynb  metric_acquisition.py  visualization_helper.py
data_exploration/saved_data/: sample-data-mean_of_means  sample-data-mean_of_stds  sample-data-processed_means  sample-data-processed_stds
data_preparation/: preparation_notebook.ipynb  transformation_manager.py  window_generator.py
experiments/: experiment_all_wells.ipynb  experiment_one_well.ipynb  experiment_well-1.ipynb  experiment_well-5.ipynb
lemi_3w/: event_metadata.py  models.py  pipeline_3w.ipynb  raw_data_acquisition.py  raw_data_inspector.py
misc/: best_model.pkl  experiment_all_wells.py  melhor_modelo_ever_all_data.pkl  test_notebook2.ipynb  test_notebook3.ipynb
pipeline/: pipeline.py
raw_data_manager/: git_remote_progress.py  models.py  pipeline_3w.ipynb  raw_data_acquisition.py  raw_data_inspector.py  raw_data_notebook.ipynb  raw_data_splitter.py  test.ipynb
tests/: test_metric_acquisition.py  test_raw_data_acquisition.py  test_raw_data_inspector.py  test_raw_data_splitter.py  test_transformation_manager.py
