[tool.poetry]
name = "lemi-3w"
version = "0.1.0"
description = "Project for developing a model capable of classifying anomalies in the Petrobras 3W dataset."
authors = ["Marcus Carr <marcus_carr@usp.br>"]
readme = "README.md"
packages = [{include = "lemi_3w"}]

[tool.poetry.dependencies]
python = "~3.10"
gitpython = "^3.1.32"
parallelbar = "^1.3.1"
scikit-learn = "^1.3.0"
seaborn = "^0.12.2"
tensorflow = "^2.14.0"
rich = "^13.5.3"
pyarrow = "^13.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "22.3.0"
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
